# KalaCrashHandler

./: CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  Linux_prerequisites.txt  README.md  Windows_prerequisites.txt  build_all_windows.bat  build_linux_debug.sh  build_linux_release.sh  build_windows_debug.bat  build_windows_release.bat  send_to_engine.bat  send_to_testproject.bat
include/: crashHandler.hpp  errorPopup.hpp  log.hpp
src/: crashHandler.cpp  errorPopup.cpp  log.cpp
